--- a/app/src/main/res/layout/adapter_list_product.xml
+++ b/app/src/main/res/layout/adapter_list_product.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_margin="10dp"
     android:orientation="vertical">
 
     <TextView
@@ -22,7 +22,7 @@
             android:id="@+id/listPriceProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
+            android:layout_weight="2"
             android:text="@string/preco" />
 
         <TextView
@@ -30,7 +30,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/qtd" />
+            android:textAlignment="viewEnd"
+            android:layout_gravity="right"
+            android:text="@string/qtd"
+
+             />
 
     </LinearLayout>
 
