--- a/app/src/main/res/layout/adapter_list_clients.xml
+++ b/app/src/main/res/layout/adapter_list_clients.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/listNameProduct"
+        android:id="@+id/listNameCleint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
@@ -19,14 +19,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/listCategoriaProduct"
+            android:id="@+id/listCpfClient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="@string/preco" />
 
         <TextView
-            android:id="@+id/listIdProduct"
+            android:id="@+id/listIdClient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -34,7 +34,7 @@
             android:layout_gravity="right"
             android:text="@string/qtd"
 
-             />
+            />
 
     </LinearLayout>
 
