Novas Telas Adicionadas

--- a/app/src/main/res/layout/activity_conf_funcionario.xml
+++ b/app/src/main/res/layout/activity_conf_funcionario.xml
@@ -59,12 +59,10 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="funcionário"
-        android:textAllCaps="false"
         android:textColor="@android:color/black"
+        android:text="Funcionário"
+        android:textAllCaps="false"
         android:textSize="36sp"
-        android:textStyle="bold"
-        android:typeface="normal"
         app:layout_constraintBottom_toTopOf="@+id/molduraIconFunc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -190,7 +188,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_num"
         android:fontFamily="@font/allerstd"
-        android:hint="numero"
+        android:hint="número"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
