--- a/app/src/main/res/layout/activity_conf_estoque.xml
+++ b/app/src/main/res/layout/activity_conf_estoque.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.ConfClienteActivity">
+    tools:context=".Activity.ConfEstoqueActivity">
 
-    <!--Moldura Funcionario-->
+    <!--Moldura Estoque-->
 
     <ImageView
-        android:id="@+id/molduraIconCliente"
+        android:id="@+id/molduraIconFunc"
         android:layout_width="119dp"
         android:layout_height="115dp"
         android:layout_marginStart="8dp"
@@ -20,11 +20,32 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23000002"
+        app:layout_constraintVertical_bias="0.231"
         app:srcCompat="@drawable/moldura_imagem" />
 
+    <EditText
+        android:layout_width="200dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/LblDescAniversario"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="gravity"
+        android:lines="3"
+        android:minLines="3"
+
+        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+          unknown printer took a galley "
+        app:layout_constraintStart_toEndOf="@+id/molduraIconFunc"
+        app:layout_constraintTop_toBottomOf="@+id/LblNomeFuncionarioText" />
     <!--Titulo da pagina -->
 
     <TextView
@@ -38,18 +59,18 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="adicionar novo"
+        android:text="adicionar novo item ao"
         android:textColor="@color/colorPrimary"
-        android:textSize="17sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/molduraIconFunc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.14999998" />
+        app:layout_constraintVertical_bias="0.13999999" />
 
     <TextView
-        android:id="@+id/LblNomeClienteText"
+        android:id="@+id/LblNomeFuncionarioText"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:layout_marginStart="8dp"
@@ -59,13 +80,13 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Cliente"
+        android:text="Estoque"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
         android:textSize="36sp"
         android:textStyle="bold"
         android:typeface="normal"
-        app:layout_constraintBottom_toTopOf="@+id/molduraIconCliente"
+        app:layout_constraintBottom_toTopOf="@+id/molduraIconFunc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -73,48 +94,18 @@
 
     <!--Descricao do funcionario-->
 
-    <TextView
-        android:id="@+id/LblDescNome"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/allerstd"
-        android:text="Nome"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39" />
-
 
     <EditText
-        android:id="@+id/EditTextNomeCliente"
-        android:layout_width="293dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:id="@+id/EditTextNomeFuncionario"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="353dp"
         android:background="@drawable/tbx_nome"
         android:fontFamily="@font/allerstd"
         android:src="@drawable/tbx_nome"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LblDescNome"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/LblNomeFuncionarioText"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/LblDescAniversario"
@@ -127,7 +118,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Aniversário"
+        android:text="Cód. Produto"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -139,7 +130,7 @@
         app:layout_constraintVertical_bias="0.51" />
 
     <EditText
-        android:id="@+id/EditTextAniversarioCliente"
+        android:id="@+id/EditTextAniversarioFuncionario"
         android:layout_width="104dp"
         android:layout_height="27dp"
         android:layout_marginStart="8dp"
@@ -171,7 +162,51 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Endereço"
+        android:text="Quantidade"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.722" />
+
+    <TextView
+        android:id="@+id/lblDescEndereco2"
+        android:layout_width="wrap_content"
+        android:layout_height="18dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/allerstd"
+        android:text="Validade"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.868"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.722" />
+
+    <TextView
+        android:id="@+id/lblDescEndereco"
+        android:layout_width="wrap_content"
+        android:layout_height="18dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/allerstd"
+        android:text="Preço"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -183,8 +218,8 @@
         app:layout_constraintVertical_bias="0.73" />
 
     <EditText
-        android:id="@+id/EditTextNumeroCliente"
-        android:layout_width="59dp"
+        android:id="@+id/EditTextNumeroFuncionario"
+        android:layout_width="93dp"
         android:layout_height="27dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -194,19 +229,18 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_num"
         android:fontFamily="@font/allerstd"
-        android:hint="número"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LblDescEndereco"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/EditTextRuaCliente"
-        android:layout_width="152dp"
+        android:id="@+id/EditTextRuaFuncionario"
+        android:layout_width="117dp"
         android:layout_height="27dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -216,7 +250,6 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_rua"
         android:fontFamily="@font/allerstd"
-        android:hint="rua"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -227,8 +260,8 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/EditTextBairroCliente"
-        android:layout_width="144dp"
+        android:id="@+id/EditTextBairroFuncionario"
+        android:layout_width="113dp"
         android:layout_height="27dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -238,81 +271,13 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_bairro"
         android:fontFamily="@font/allerstd"
-        android:hint="bairro"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/EditTextNumeroFuncionario"
         app:layout_constraintTop_toBottomOf="@+id/LblDescEndereco"
         app:layout_constraintVertical_bias="0.0" />
-
-    <EditText
-        android:id="@+id/EditTextCEPCliente"
-        android:layout_width="113dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/tbx_cep"
-        android:fontFamily="@font/allerstd"
-        android:hint="cep"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LblDescEndereco"
-        app:layout_constraintVertical_bias="0.3" />
-
-    <EditText
-        android:id="@+id/EditTextCidadeCliente"
-        android:layout_width="132.5dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/tbx_cidade"
-        android:fontFamily="@font/allerstd"
-        android:hint="cidade"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.55"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LblDescEndereco"
-        app:layout_constraintVertical_bias="0.3" />
-
-    <EditText
-        android:id="@+id/EditTextEstadoCliente"
-        android:layout_width="94dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/tbx_estado"
-        android:fontFamily="@font/allerstd"
-        android:hint="estado"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LblDescEndereco"
-        app:layout_constraintVertical_bias="0.3" />
 
     <TextView
         android:id="@+id/LblDescTelefone"
@@ -325,7 +290,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Telefone"
+        android:text="Tamanho"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -337,7 +302,7 @@
         app:layout_constraintVertical_bias="0.62" />
 
     <EditText
-        android:id="@+id/EditTextTelefoneCliente"
+        android:id="@+id/EditTextTelefoneFuncionario"
         android:layout_width="179dp"
         android:layout_height="27dp"
         android:layout_marginStart="8dp"
@@ -369,7 +334,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Email"
+        android:text="Categoria"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -381,7 +346,7 @@
         app:layout_constraintVertical_bias="0.62" />
 
     <EditText
-        android:id="@+id/EditTextEmailCliente"
+        android:id="@+id/EditTextEmailFuncionario"
         android:layout_width="181dp"
         android:layout_height="27dp"
         android:layout_marginStart="8dp"
@@ -402,48 +367,6 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/LblDescCNPJ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/allerstd"
-        android:text="CPF"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.35"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.51" />
-
-    <EditText
-        android:id="@+id/EditTextCPFCliente"
-        android:layout_width="134dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/tbx_cpf"
-        android:fontFamily="@font/allerstd"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LblDescCNPJ"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
         android:id="@+id/LblDescRG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -454,7 +377,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="RG"
+        android:text="Nome"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -466,31 +389,22 @@
         app:layout_constraintVertical_bias="0.51" />
 
     <EditText
-        android:id="@+id/EditTextRGCliente"
-        android:layout_width="111dp"
+        android:id="@+id/EditTextRGFuncionario"
+        android:layout_width="213dp"
         android:layout_height="27dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_rg"
         android:fontFamily="@font/allerstd"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LblDescRG"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="308dp"
+        tools:ignore="MissingConstraints" />
 
     <!--Divisoria do botao-->
 
     <!--botao Salvar e Cancelar-->
     <Button
-        android:id="@+id/btnSalvarCadastroCliente"
+        android:id="@+id/btnSalvarCadastroFuncionario"
         android:layout_width="128dp"
         android:layout_height="42.5dp"
         android:layout_marginStart="8dp"
@@ -510,7 +424,7 @@
         app:layout_constraintVertical_bias="0.98" />
 
     <Button
-        android:id="@+id/btnCancelarCadastroCliente"
+        android:id="@+id/btnCancelarCadastroFuncionario"
         android:layout_width="128dp"
         android:layout_height="42.5dp"
         android:layout_marginStart="8dp"
@@ -527,8 +441,7 @@
         app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98"
-        android:onClick="cancelar"/>
+        app:layout_constraintVertical_bias="0.98" />
 
 
 </android.support.constraint.ConstraintLayout>
