upload client class

--- a/app/src/main/res/layout/activity_list_clients.xml
+++ b/app/src/main/res/layout/activity_list_clients.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.ListProductActivity">
+    tools:context=".Activity.ListClientsActivity">
 
     <TextView
         android:id="@+id/textView6"
@@ -43,6 +43,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/plus"
+        android:onClick="openAddNewClient"
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
