--- a/app/src/main/res/layout/activity_conf_estoque.xml
+++ b/app/src/main/res/layout/activity_conf_estoque.xml
@@ -14,7 +14,7 @@
         android:layout_height="115dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="108dp"
         app:layout_constraintEnd_toStartOf="@+id/editText3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,11 +31,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:hint="Descrição"
         android:lines="3"
         android:minLines="3"
-        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-          unknown printer took a galley "
         android:textAlignment="gravity"
         app:layout_constraintBottom_toTopOf="@+id/LblDescAniversario"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,41 +104,34 @@
         android:id="@+id/LblDescAniversario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
         android:text="Cód. Produto"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.881"
-        app:layout_constraintStart_toEndOf="@+id/LblDescRG"
-        tools:layout_editor_absoluteY="276dp" />
+        app:layout_constraintBottom_toTopOf="@+id/EditTextAniversarioFuncionario"
+        app:layout_constraintEnd_toEndOf="@+id/editText3"
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintStart_toStartOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/EditTextNomeFuncionario"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/EditTextAniversarioFuncionario"
         android:layout_width="104dp"
         android:layout_height="27dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_aniversario"
         android:fontFamily="@font/allerstd"
         android:inputType="date"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.928"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LblDescAniversario"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/LblDescAniversario"
+        app:layout_constraintHorizontal_bias="0.875"
+        app:layout_constraintStart_toStartOf="@+id/LblDescAniversario"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="308dp" />
 
     <TextView
         android:id="@+id/LblDescEndereco"
@@ -202,18 +193,16 @@
         android:id="@+id/EditTextNumeroFuncionario"
         android:layout_width="93dp"
         android:layout_height="31dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_num"
         android:fontFamily="@font/allerstd"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LblDescEndereco"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/lblDescEndereco2"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="@+id/lblDescEndereco2"
+        tools:layout_editor_absoluteY="483dp" />
 
     <EditText
         android:id="@+id/EditTextRuaFuncionario"
@@ -241,7 +230,7 @@
     <EditText
         android:id="@+id/EditTextBairroFuncionario"
         android:layout_width="113dp"
-        android:layout_height="27dp"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -350,10 +339,7 @@
         android:id="@+id/LblDescRG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
         android:text="Nome"
@@ -361,9 +347,11 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/EditTextRGFuncionario"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/molduraIconFunc"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/molduraIconFunc"
+        app:layout_constraintTop_toBottomOf="@+id/molduraIconFunc"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/EditTextRGFuncionario"
