--- a/app/src/main/res/layout/activity_conf_funcionario.xml
+++ b/app/src/main/res/layout/activity_conf_funcionario.xml
@@ -121,7 +121,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Aniversário"
+        android:text="Nascimento"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
